Fix label overflow in corners

--- a/src/components/map/stopMap.css
+++ b/src/components/map/stopMap.css
@@ -32,6 +32,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border-radius: borderRadius;
 }
 
 .outline {
